typescript/checker/tests/conformance/async/es5/asyncAwaitNestedClasses_es5.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            229,
        ),
        hi: BytePos(
            236,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es5/asyncAwaitNestedClasses_es5.ts:8:24
  |
8 |             return new Promise((resolve) => { resolve(null); });
  |                        ^^^^^^^

